# atlas-engine

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: quarterly-pipeline.yml
data/: manifest.json
data/denue/: denue_counts.json
data/results/: mx-agu_manufactura_total__us-ak_manufactura_total.json  mx-agu_manufactura_total__us-in_manufactura_total.json  mx-bc_aeroespacial__us-ca_aeroespacial.json  mx-bc_farmaceutica__us-ca_farmaceutica.json  mx-bc_manufactura_total__ca-bc_manufactura_total.json  mx-bc_manufactura_total__us-ca_manufactura_total.json  mx-bc_manufactura_total__us-tn_manufactura_total.json  mx-bcs_manufactura_total__us-or_manufactura_total.json  mx-bcs_manufactura_total__us-ut_manufactura_total.json  mx-cam_manufactura_total__us-ar_manufactura_total.json  mx-cdmx_manufactura_total__us-al_manufactura_total.json  mx-cdmx_manufactura_total__us-ms_manufactura_total.json  mx-chh_aeroespacial__ca-qc_aeroespacial.json  mx-chh_aeroespacial__us-tx_aeroespacial.json  mx-chh_agroindustrial__us-nm_agroindustrial.json  mx-chh_manufactura_total__us-co_manufactura_total.json  mx-chh_manufactura_total__us-mt_manufactura_total.json  mx-chh_manufactura_total__us-nm_manufactura_total.json  mx-chh_manufactura_total__us-tx_manufactura_total.json  mx-coa_eolica__us-tx_eolica.json  (+75 more)
src/: config.py  database.py  main.py
tests/: conftest.py  test_adapters.py  test_canada.py  test_conagua_eam.py  test_config.py  test_econometrics.py  test_live.py  test_llm.py  test_main.py  test_territorial.py  test_trade.py  test_usa_adapter.py
(+66 files in other folders)
