[project]
name = "atlas-engine"
version = "0.1.0"
description = "Engine para el Atlas Prospectivo Territorial-Industrial — análisis CGV, econometría y 34 indicadores territoriales extensible a cualquier país/sector"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pandas>=3.0,<4",
    "numpy>=2.5,<3",
    "statsmodels>=0.14,<1",
    "scipy>=1.18,<2",
    "pyyaml>=6.0,<7",
    "python-dotenv>=1.2,<2",
    "tenacity>=9.1,<10",
    "httpx>=0.28,<1",
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<10",
    "pytest-asyncio>=0.25,<1",
    "httpx>=0.28,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
